# ps

./: .gitignore
acmicpc/16933/: input.txt  main.go  main.py
acmicpc/17143/: main.cc
acmicpc/red-blue-hole/: red-blue-hole.cc
codeforce/Codeforces Global Round 7/: CMakeLists.txt  a.cc  b.cc
codeforce/Codeforces Round #629 (Div. 3)/: a.go
codeforce/Educational Codeforces Round 84/a/: CMakeLists.txt
codeforce/Educational Codeforces Round 84/b/: main.cc
leetcode/: 4.median-of-two-sorted-arrays.cpp  run.sh
leetcode/10.RegularExpressionMatching/: main.go
leetcode/866.PrimePalindrome/: 866.prime-palindrome  866.prime-palindrome.cpp  main.cc
leetcode/866.PrimePalindrome/866.prime-palindrome.dSYM/Contents/: Info.plist
leetcode/866.PrimePalindrome/866.prime-palindrome.dSYM/Contents/Resources/DWARF/: 866.prime-palindrome
